# dep-version-lens

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json
scripts/: dev.sh
src/: config.ts  decorationManager.ts  extension.ts  fileWatcher.ts  npmVersionService.ts  parserManager.ts  types.ts  updateManager.ts  utils.ts  versionService.ts
src/parsers/: packageJsonParser.ts  pipfileParser.ts  pyprojectParser.ts  requirementsParser.ts  setupParser.ts
src/test/suite/: extension.test.ts  index.ts  requirementsParser.test.ts
test-files/: package.json  pyproject.toml  requirements.txt
